[package]
name = "mio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy-inspector-egui = "0.16.6"
bevy-inspector-egui-rapier = { version = "0.9.0", features = ["rapier3d"] }
bevy_asset_loader = { version = "0.14.1", features = ["stageless"] }
bevy_egui = "0.19.0"
bevy_rapier3d = { version = "0.20.0", features = ["simd-stable", "debug-render"] }
bevy_reflect = "0.9.1"
color-eyre = "0.6.2"
egui_dock = "0.3.1"
iyes_loopless = "0.9.1"
urdf-rs = "0.6.8"

[profile.dev.package."*"]
opt-level = 3
