[package]
name = "mio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_stl = "0.8.0"
bevy = {version = "0.10.1", features = ["dynamic_linking", "jpeg"]}
bevy-inspector-egui = "0.18.3"
bevy_egui = "0.20.3"
bevy_rapier3d = { version = "0.21.0", features = ["simd-stable", "debug-render"] }
bevy_reflect = "0.10.1"
color-eyre = "0.6.2"
egui_dock = "0.5.0"
iyes_loopless = "0.9.1"
urdf-rs = "0.7.1"
nalgebra = "0.32.2"

[profile.dev.package.bevy]
opt-level = 3

[profile.dev.package.bevy_rapier3d]
opt-level = 3

[profile.dev.package.nalgebra]
opt-level = 3